// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch.svelte > should render default 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center is-off"
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="true"
        class="relative"
        data-path="0"
        role="option"
      >
        <indicator
          class="absolute bottom-0 left-0 right-0 top-0"
        />
         
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should render text array 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center "
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
        <p>
          b
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should render using default field mapping 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center "
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
        
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
        
         
        <p>
          b
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should render using field mappings 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center "
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
        
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
        
         
        <p>
          a
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should render with value 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center is-on"
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
         
      </item>
      <item
        aria-selected="true"
        class="relative"
        data-path="1"
        role="option"
      >
        <indicator
          class="absolute bottom-0 left-0 right-0 top-0"
        />
         
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should support custom icons 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center is-off"
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="true"
        class="relative"
        data-path="0"
        role="option"
      >
        <indicator
          class="absolute bottom-0 left-0 right-0 top-0"
        />
         
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
        <p>
          b
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should support custom icons 2`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center is-off"
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="true"
        class="relative"
        data-path="0"
        role="option"
      >
        <indicator
          class="absolute bottom-0 left-0 right-0 top-0"
        />
         
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
        <p>
          b
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should support editable attribute 1`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center "
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
        <p>
          b
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;

exports[`Switch.svelte > should support editable attribute 2`] = `
<body>
  <div>
    <toggle-switch
      class="flex items-center "
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
         
        <p>
          a
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
        <p>
          b
        </p>
        
        
         
      </item>
    </toggle-switch>
    
  </div>
</body>
`;
